force-app/main/default/objects/PopcornStepExecution__c/PopcornStepExecution__c.object-meta.xml
<CustomObject>
    <label>Popcorn Step Execution</label>
    <nameField>
        <displayFormat>SEXEC#{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Step Execution #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Popcorn Step Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>