force-app/main/default/objects/PopcornStepExecution__c/fields/FeatureElementExecution__c.field-meta.xml
<CustomField>
    <fullName>FeatureElementExecution__c</fullName>
    <label>Feature Element Execution</label>
    <referenceTo>PopcornFeatureElementExecution__c</referenceTo>
    <relationshipName>StepExecutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>