force-app/main/default/objects/PopcornStepExecution__c/fields/ResultMessage__c.field-meta.xml
<CustomField>
    <fullName>ResultMessage__c</fullName>
    <label>Result Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>