force-app/main/default/objects/PopcornStepExecution__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step</label>
    <referenceTo>PopcornStep__c</referenceTo>
    <relationshipName>StepExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>