force-app/main/default/objects/PopcornStepExecution__c/fields/StepExecutionRef__c.field-meta.xml
<CustomField>
    <fullName>StepExecutionRef__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Step Execution Ref</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>